# subtitle-analysis

./: .gitignore  Makefile  README.md  all-words.csv  docker-compose-dev.yml  docker-compose.yml
codes/: all-words.py  (+6 more)
src/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/common/config/: __init__.py  config.py  config.test.ini  constant.py
src/common/decorator/: __init__.py  exception_deco.py
src/common/exceptions/: __init__.py  my_exceptions.py
src/common/google_spreadsheet/: __init__.py  gss_accessor.py
src/common/request/: __init__.py  request.py
src/common/spotify/: __init__.py  spotify_accessor.py
src/common/ssh/: __init__.py  ssh_accessor.py
src/controllers/: __init__.py  sample_controller.py  subtitle_controller.py
src/models/: __init__.py  frequency.py  model.py  part_of_speech.py  phrase.py  sample.py  sentence.py  subtitle.py  vocabulary.py
src/repositories/: __init__.py  base_repository.py  csv_base_repository.py  gss_base_repository.py  model_adapter.py  sample_repository.py  sample_repository_interface.py
src/repositories/frequencies/: __init__.py  csv_frequency_repository.py  gss_frequency_repository.py
src/repositories/group_prepositions/: __init__.py  csv_group_preposition_repository.py  gss_group_preposition_repository.py
src/services/: __init__.py  frequency_service.py  group_preposition_service.py  phrasal_verb_service.py  sample_service.py  subtitle_service.py  vocabulary_service.py
src/tests/: test_sample.py
src/utils/: __init__.py  datetime_parser.py  helper.py  nltk_helper.py  scraping.py
(+758 files in other folders)
